fix logout button center vertical align

--- a/app/assets/stylesheets/components/main_nav.scss
+++ b/app/assets/stylesheets/components/main_nav.scss
@@ -33,15 +33,32 @@ header {
     background-color: white;
 }
 
-// .search-container {
-//     color: red;
-// }
+.search-container {
+    // position: absolute;
+    // width: 90%;
+}
 
-#search-input {
-    color: #e12e0d;
+.search-form {
+    // position: relative;
+}
+
+.search-form > #search-input {
+    color: $text-grey;
     min-width: 10%;
     height: 40px;
-    background-color: $border-grey;
+    background-color: #f5f8ff;
+    border-radius: 4px;
+    border: 1px solid #f5f8ff;
+    padding: 0px 20px 0px 40px;
+    &:focus {
+        box-shadow: 0px 0px 3px 3px rgba(246, 73, 0, .3);
+        border: 1px solid $orange;
+        outline: none;
+        position: absolute;
+        width: 500px;
+        left: 0;
+        top: -20;
+    }
 }
 
 
@@ -163,6 +180,7 @@ div#login-corner {
     font-weight: 600;
     padding: 8px 16px;
     height: 40px;
+    align-content: center;
     // border: 1px solid blue;
     &:hover{
         background: linear-gradient(227deg,#ff4582,#e12e0d);
